--- a/WorkCleverSolution/WorkCleverSolution.csproj
+++ b/WorkCleverSolution/WorkCleverSolution.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>disable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>aspnet-WorkCleverSolution-9AE1C07F-88A3-4392-94F0-AE1B7E7D1743</UserSecretsId>
@@ -14,7 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.3" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0-preview.3.22175.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.33" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.0" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
@@ -26,6 +26,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Data\Migrations\" />
+      <Folder Include="Migrations\" />
       <Folder Include="wwwroot" />
     </ItemGroup>
 </Project>
